Add new dependencies for enhanced functionality and features
- Added chrono for date and time manipulation
- Included clap for command-line argument parsing with derive feature
- Integrated colored for terminal text coloring
- Added comfy-table for pretty table formatting
- Included html2md for converting HTML to Markdown
- Integrated indicatif for progress indicators
- Added readability for extracting main content from web pages
- Included refinery for database migrations
- Added reqwest for HTTP client capabilities
- Integrated rusqlite for SQLite database interaction
- Included scraper for web scraping capabilities

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.42"
+clap = { version = "4.5.49", features = ["derive"] }
+colored = "3.0.0"
+comfy-table = "7.2.1"
+html2md = "0.2.15"
+indicatif = "0.18.0"
+readability = "0.3.0"
+refinery = "0.9.0"
+reqwest = "0.12.24"
+rusqlite = "0.37.0"
+scraper = "0.24.0"
