--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ html2md = "0.2.15"
 indicatif = "0.18.0"
 readability = "0.3.0"
 refinery = { version = "0.9.0", features = ["rusqlite"] }
-reqwest = { version = "0.12.24", features = ["blocking"] }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
 rusqlite = { version = "0.32", features = ["bundled"] }
 scraper = "0.24.0"
 serde = { version = "1.0", features = ["derive"] }
