--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+browser = { package = "open", version = "5" }
 anyhow = "1.0"
 blake3 = "1.5"
 chrono = { version = "0.4.42", features = ["serde"] }
