--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ rusqlite = { version = "0.32", features = ["bundled"] }
 scraper = "0.24.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+which = "8.0.0"
