--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,9 @@ rusqlite = { version = "0.32", features = ["bundled"] }
 scraper = "0.24.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
+similar = { version = "2.6", features = ["inline"] }
+url = "2.5"
 which = "8.0.0"
 dialoguer = "0.12.0"
+tempfile = "3.15"
